@@ -2,7 +2,6 @@
 /* myconfig-maxset.h or myconfig-restcompile1.h */
 #define BOND_CONSTRAINT
 #define BOND_ANGLE_COSSQUARE
-/* ADRESS does not compile at the moment, we don't know why! */
-//#define ADRESS
-//#define VIRTUAL_SITES
-//#define VIRTUAL_SITES_COM
+#define VIRTUAL_SITES_COM
+/* using ADRESS causes several tests to fail */
+/* #define ADRESS */
